--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,7 @@
 :root {
   font-variant-ligatures: none;
   -webkit-font-smoothing: subpixel-antialiased;
-  -webkit-transform: translateZ(0) scale(1.0, 1.0);
+  transfom: scale(2); zoom: 0.5;
 }
 /*begin:text*/
 @font-face {
