--- a/blog/style/style.css
+++ b/blog/style/style.css
@@ -14,7 +14,7 @@
 /*begin:layout*/
 #title {
   color: #000000;
-  font-size: 46px;
+  font-size: 2.875em;
   font-family: "Hairline";
   margin-top: 100px;
   margin-bottom: 0px;
@@ -43,7 +43,7 @@ body {
 }
 .entry a {
   color: #000000;
-  font-size: 38px;
+  font-size: 2.375em;
   letter-spacing: 2px;
   word-spacing: -1px;
   font-family: "Hairline";
@@ -61,7 +61,7 @@ body {
   padding-top: 23px;
 }
 .contents {
-  font-size: 20px;
+  font-size: 1.25em;
   text-align: left;
   font-family: "Thin";
   letter-spacing: 0px;
