--- a/style/style.css
+++ b/style/style.css
@@ -45,7 +45,7 @@
 #title {
   text-transform: uppercase;
   color: #000000;
-  font-size: 30px;
+  font-size: 34px;
   font-family: "Hairline";
   letter-spacing: 8px;
 }
@@ -119,7 +119,7 @@ a {
   flex-grow: 0;
   flex-shrink: 0;
   max-width: 13px;
-  margin: 97px;
+  margin: 89px;
   flex: 0 0 13px;
 }
 .container:hover {
@@ -163,8 +163,10 @@ a {
   margin-top: 27px;
 }
 #color-logo p {
-  margin: 57px;
+  margin-right: 22px;
+  margin-left: 30px;
   margin-top: 20px;
+  margin-bottom: 57px;
 }
 #color-logo img {
   max-width: 220px;
