--- a/blog/style/style.css
+++ b/blog/style/style.css
@@ -1,5 +1,6 @@
 :root {
   font-variant-ligatures: none;
+  -webkit-font-smoothing: subpixel-antialiased;
 }
 /*begin:text*/
 @font-face {
@@ -20,6 +21,10 @@
   margin-bottom: 0px;
   letter-spacing: 8px;
   word-spacing: -4px;
+  /* Smartphones (portrait and landscape) ----------- */
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+    font-size: 3.125em;
+}
 }
 body {
   margin: auto;
@@ -48,6 +53,10 @@ body {
   word-spacing: -1px;
   font-family: "Hairline";
   text-decoration: none;
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+    font-size: 2.625em;
+}
+  
 }
 .entry img {
   position: relative;
