--- a/blog/style/style.css
+++ b/blog/style/style.css
@@ -15,7 +15,6 @@
 /*begin:layout*/
 #title {
   color: #000000;
-  font-size: 2.875em;
   font-family: "Hairline";
   margin-top: 100px;
   margin-bottom: 0px;
@@ -28,6 +27,11 @@
     font-size: 10em;
     }
 }
+ @media only screen and (min-device-width : 481px) {
+    #title {
+font-size: 2.875em;
+    }
+ }
 
 body {
   margin: auto;
@@ -51,7 +55,6 @@ body {
 }
 .entry a {
   color: #000000;
-  font-size: 2.375em;
   letter-spacing: 2px;
   word-spacing: -1px;
   font-family: "Hairline";
@@ -60,6 +63,11 @@ body {
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
     .entry a {
     font-size: 8em;
+    }
+}
+@media only screen and (min-device-width : 481px) {
+    .entry a {
+    font-size: 2.375em;
     }
 }
 
