--- a/style/style.css
+++ b/style/style.css
@@ -23,7 +23,7 @@
   position: relative;
   margin: auto;
   float: right;
-  bottom: 57px;
+  bottom: 32px;
   right: 17px;
   opacity: 1;
   transition: opacity 0.25s ease-in-out;
@@ -62,6 +62,7 @@ body {
   border-style: solid;
   border-color: #E2E2E2;
   border-radius: 25px;
+  padding-bottom: 25px;
 }
 a {
   text-decoration: none;
@@ -131,7 +132,7 @@ a {
 .reset img {
   max-width: 20px;
   position: relative;
-  bottom: -44px;
+  bottom: -70px;
   margin-top: 0px;
   display: block;
   margin-left: auto;
@@ -142,7 +143,7 @@ a {
   position: relative;
   padding: 8px;
   left: 8px;
-  bottom: 4px;
+  bottom: -21px;
   transition: opacity 0.25s ease-in-out;
   -moz-transition: opacity 0.25s ease-in-out;
   -webkit-transition: opacity 0.25s ease-in-out;
