--- a/blog/style/style.css
+++ b/blog/style/style.css
@@ -4,7 +4,10 @@
 }
 @media only screen and (min-device-width : 481px) {
     .entry a {
-    font-size: 2.375em;
+    font-size: 2.312em;
+    }
+    a.sub {
+    font-size: 1em !important;
     }
     #title {
     font-size: 2.875em;
@@ -18,6 +21,9 @@
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
     .entry a {
     font-size: 3.25em;
+    }
+    a.sub {
+    font-size: 1em !important;
     }
     #title {
     font-size: 4em;
@@ -64,9 +70,9 @@ body {
   width: 830px;
   margin: auto;
   margin-top: 48px;
-  background: #c5c5c5;
-  border-radius: 5px;
-  padding-top: 20px;
+  background-color: #D5D5D5;
+  border-radius: 14px;
+  padding-top: 30px;
 }
 .entry a {
   color: #000000;
@@ -75,13 +81,27 @@ body {
   font-family: "Hairline";
   text-decoration: none;
 }
+  a.sub {
+  color: #000000;
+  font-style: italic;
+  letter-spacing: 2px;
+  word-spacing: -1px;
+  font-family: "Thin";
+  text-decoration: none;
+  line-height: 3;
+}
+  a.date {
+  font-style: normal;
+}
 .entry img {
   position: relative;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  max-width: 600px;
+  max-width: 550px;
+  max-height: 250px;
   border-radius: 3px;
+  padding-bottom: 10px;
 }
 .header {
   padding-top: 23px;
@@ -90,13 +110,12 @@ body {
   font-size: 1.375em;
   text-align: left;
   font-family: "Thin";
-  letter-spacing: 0px;
-  word-spacing: .5px;
-  padding-left: 30px;
-  padding-right: 30px;
-  padding-bottom: 22px;
-  text-indent: 50px;
-  line-height: 1.75;
+  letter-spacing: -.75px;
+  word-spacing: 1px;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-bottom: 32px;
+  line-height: 1.5;
 }
 #footer {
   position: relative;
@@ -130,6 +149,20 @@ body {
   -moz-animation: fadeIn 10s;
   -o-animation: fadeIn 10s;
   -ms-animation: fadeIn 10s;
+}
+.img-pair {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.img-pair img {
+    flex-grow: 0;
+    flex-shrink: 0;
+    max-width: 550px;
+    max-height: 250px;
+    margin-left: 50px;
+    margin-right: 50px;
+    flex: 0 0 13px;
 }
 @keyframes fadeIn {
   0% {
