--- a/style/style.css
+++ b/style/style.css
@@ -19,6 +19,7 @@
   font-family: "Thin";
   padding: 8px;
   background-color: #e2e2e2;
+  border: 1px solid #ffffff;
   color: #000000;
   border-radius: 10px;
   position: relative;
