--- a/style/style.css
+++ b/style/style.css
@@ -6,49 +6,49 @@
 @font-face {
   font-family: "Hairline";
   src: url("fonts/Hairline.ttf") format("truetype");
-  font-weight: 66;
+  font-weight: 100;
 }
-@font-face {
-  font-family: "Thin";
-  src: url("fonts/Thin.ttf") format("truetype");
-}
-#blog {
+.nav-btn {
   font-size: 20px;
-  word-spacing: 1px;
-  letter-spacing: -.75px;
-  font-family: "Thin";
+  word-spacing: 0px;
+  letter-spacing: 0px;
+  font-family: "Hairline";
   padding: 8px;
-  background-color: #e2e2e2;
-  border: 1px solid #ffffff;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  border: .5px solid #000000;
   color: #000000;
-  border-radius: 10px;
+  border-radius: 5px;
   position: relative;
   margin: auto;
-  float: right;
   bottom: 30px;
-  right: 17px;
   opacity: 1;
-  transition: opacity 0.25s ease-in-out;
-  -moz-transition: opacity 0.25s ease-in-out;
-  -webkit-transition: opacity 0.25s ease-in-out;
+  transition: all 0.15s ease-in-out;
+  -moz-transition: all 0.15s ease-in-out;
+  -webkit-transition: all 0.15s ease-in-out;
+}
+#blog {
+  float: right;
+  right: 30px;
+}
+#contact {
+  float: left;
+  left: 30px;
 }
 #percentage {
   position: fixed;
   font-size: 20px;
-  font-family: "Thin";
-  padding: 8px;
-  letter-spacing: -.25px;
-  background-color: #e2e2e2;
+  font-family: "Hairline";
+  letter-spacing: 0px;
   color: #000000;
-  border-radius: 10px;
-  right: 31px;
-  top: 16.5px;
+  right: 28px;
+  top: 22px;
   opacity: 0;
 }
 #title {
   text-transform: uppercase;
   color: #000000;
-  font-size: 34px;
+  font-size: 40px;
   font-family: "Hairline";
   letter-spacing: 8px;
 }
@@ -58,14 +58,6 @@
 body {
   margin: auto;
   background: #CCCCCC;
-}
-.framed {
-  min-height: 95%;
-  border-width: 14.5px;
-  border-style: solid;
-  border-color: #E2E2E2;
-  border-radius: 25px;
-  padding-bottom: 27px;
 }
 a {
   text-decoration: none;
@@ -87,16 +79,16 @@ a {
 }
 .container {
   justify-content: space-between;
-  transition: opacity 0.25s ease-in-out;
-  -moz-transition: opacity 0.25s ease-in-out;
-  -webkit-transition: opacity 0.25s ease-in-out;
+  color: #000000;
+  transition: all 0.15s ease-in-out;
+  -moz-transition: all 0.15s ease-in-out;
+  -webkit-transition: all 0.15s ease-in-out;
 }
 .serv p {
   font-size: 20px;
-  word-spacing: 1px;
-  letter-spacing: -.75px;
-  font-family: "Thin";
-  color: #000000;
+  word-spacing: 0px;
+  letter-spacing: 0px;
+  font-family: "Hairline";
   margin-top: 5px;
 }
 /*begin:elements*/
@@ -133,40 +125,26 @@ a {
 }
 .container:hover {
   opacity: 0.75;
-  transition: opacity 0.25s ease-in-out;
-  -moz-transition: opacity 0.25s ease-in-out;
-  -webkit-transition: opacity 0.25s ease-in-out;
+  color: #FFFFFF;
+  transition: opacity 0.15s ease-in-out;
+  -moz-transition: opacity 0.15s ease-in-out;
+  -webkit-transition: opacity 0.15s ease-in-out;
 }
 .reset img {
   max-width: 20px;
   position: relative;
-  bottom: -72px;
+  bottom: -8px;
   margin-top: 0px;
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
-#vCard img {
-  max-width: 50px;
-  position: relative;
-  padding: 8px;
-  left: 8px;
-  bottom: -23px;
-  transition: opacity 0.25s ease-in-out;
-  -moz-transition: opacity 0.25s ease-in-out;
-  -webkit-transition: opacity 0.25s ease-in-out;
-}
-#blog:hover {
-  opacity: 0.75;
-  transition: opacity 0.25s ease-in-out;
-  -moz-transition: opacity 0.25s ease-in-out;
-  -webkit-transition: opacity 0.25s ease-in-out;
-}
-#vCard img:hover {
-  opacity: 0.75;
-  transition: opacity 0.25s ease-in-out;
-  -moz-transition: opacity 0.25s ease-in-out;
-  -webkit-transition: opacity 0.25s ease-in-out;
+.nav-btn:hover {
+  color: #FFFFFF;
+  border: .5px solid #FFFFFF;
+  transition: all 0.12s ease-in-out;
+  -moz-transition: all 0.12s ease-in-out;
+  -webkit-transition: all 0.12s ease-in-out;
 }
 #color-logo {
   margin-top: 100px;
