--- a/mind-nodes/style/style.css
+++ b/mind-nodes/style/style.css
@@ -9,27 +9,21 @@
     #title {
     font-size: 2.875em;
     }
+    .post img {
+      max-width: 18px;
+      display:inline-block;
+    }
+    #home {
+      border: .5px solid;
+    }
     #home img {
         max-width: 19px;
         padding: 8px;
         padding-top: 7px;
         padding-bottom: 5px;
     }
-    #contents p {
-      font-size: .5em;
-      letter-spacing: 0px;
-      word-spacing: 0px;
-      text-decoration: none;
-      display:inline-block;
-    }
     .post {
-      font-size: 1.375em;
-      font-family: "Hairline";
-      letter-spacing: 0px;
-      word-spacing: 0px;
       padding-left: 250px;
-      line-height: 0;
-      text-align: left;
     }
 }
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
@@ -39,26 +33,21 @@
     #title {
     font-size: 4em;
     }
-    #home img {
-        max-width: 25px;
-        padding: 10px;
-        padding-bottom: 7px;
-    }
-    #contents p {
-      font-size: .5em;
-      letter-spacing: 0px;
-      word-spacing: 0px;
-      text-decoration: none;
+    .post img {
+      max-width: 25px;
       display:inline-block;
     }
+    #home {
+      border: 1.5px solid;
+    }
+    #home img {
+        max-width: 38px;
+        padding: 16px;
+        padding-top: 13px;
+        padding-bottom: 14px;
+    }
     .post {
-      font-size: 1.375em;
-      font-family: "Hairline";
-      letter-spacing: 0px;
-      word-spacing: 0px;
       padding-left: 200px;
-      line-height: 0;
-      text-align: left;
     }
 }
 /*begin:text*/
@@ -101,8 +90,11 @@ body {
   letter-spacing: 1px;
   text-decoration: none;
 } 
-.post img {
-  max-width: 18px;
+#contents p {
+  font-size: .5em;
+  letter-spacing: 0px;
+  word-spacing: 0px;
+  text-decoration: none;
   display:inline-block;
 }
 .post:hover {
@@ -122,7 +114,6 @@ body {
   margin-top: 200px;
   margin-bottom: 25px;
   display: inline-block;
-  border: .5px solid;
   color: #000000;
   overflow: hidden;
   border-radius: 100%;
@@ -142,6 +133,15 @@ body {
   -moz-animation: fadeIn 10s;
   -o-animation: fadeIn 10s;
   -ms-animation: fadeIn 10s;
+}
+.post {
+  font-size: 1.375em;
+  font-family: "Hairline";
+  letter-spacing: 0px;
+  word-spacing: 0px;
+  padding-left: 200px;
+  line-height: 0;
+  text-align: left;
 }
 @keyframes fadeIn {
   0% {
