--- a/style/style.css
+++ b/style/style.css
@@ -2,14 +2,77 @@
   font-variant-ligatures: none;
   -webkit-font-smoothing: subpixel-antialiased;
 }
+@media only screen and (min-device-width : 481px) {
+  .nav-btn {
+    font-size: 20px;
+  }
+  .reset img {
+    max-width: 20px;
+    bottom: -8px;
+  }
+  .serv-buttons img {
+    max-width: 13px;
+    margin-right: 28px;
+    margin-left: 28px;
+  }
+  .serv p {
+    font-size: 20px;
+  }
+  #percentage {
+    font-size: 20px;
+  }
+}
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+  .nav-btn {
+    font-size: 30px;
+  }
+  .reset img {
+    max-width: 35px;
+    bottom: -6px;
+  }
+  .serv-buttons img {
+    max-width: 20px;
+    margin-right: 23px;
+    margin-left: 23px;
+  }
+  .serv p {
+    font-size: 30px;
+  }
+  #percentage {
+    font-size: 30px;
+  }
+}
 /*begin:text*/
 @font-face {
   font-family: "Hairline";
   src: url("fonts/Hairline.ttf") format("truetype");
   font-weight: 100;
 }
+#blog {
+  float: right;
+  right: 30px;
+}
+#contact {
+  float: left;
+  left: 30px;
+}
+#percentage {
+  position: fixed;
+  font-family: "Hairline";
+  letter-spacing: 0px;
+  color: #000000;
+  right: 28px;
+  top: 22px;
+  opacity: 0;
+}
+#title {
+  text-transform: uppercase;
+  color: #000000;
+  font-size: 40px;
+  font-family: "Hairline";
+  letter-spacing: 8px;
+}
 .nav-btn {
-  font-size: 20px;
   word-spacing: 0px;
   letter-spacing: 0px;
   font-family: "Hairline";
@@ -27,30 +90,11 @@
   -moz-transition: all 0.15s ease-in-out;
   -webkit-transition: all 0.15s ease-in-out;
 }
-#blog {
-  float: right;
-  right: 30px;
-}
-#contact {
-  float: left;
-  left: 30px;
-}
-#percentage {
-  position: fixed;
-  font-size: 20px;
-  font-family: "Hairline";
-  letter-spacing: 0px;
-  color: #000000;
-  right: 28px;
-  top: 22px;
-  opacity: 0;
-}
-#title {
-  text-transform: uppercase;
-  color: #000000;
-  font-size: 40px;
-  font-family: "Hairline";
-  letter-spacing: 8px;
+.reset img {
+  position: relative;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 /*end:text*/
 
@@ -85,7 +129,6 @@ a {
   -webkit-transition: all 0.15s ease-in-out;
 }
 .serv p {
-  font-size: 20px;
   word-spacing: 0px;
   letter-spacing: 0px;
   font-family: "Hairline";
@@ -116,9 +159,6 @@ a {
 .serv-buttons img {
   flex-grow: 0;
   flex-shrink: 0;
-  max-width: 13px;
-  margin-right: 28px;
-  margin-left: 28px;
   margin-top: 5px;
   margin-bottom: 100px;
   flex: 0 0 13px;
@@ -129,15 +169,6 @@ a {
   transition: opacity 0.15s ease-in-out;
   -moz-transition: opacity 0.15s ease-in-out;
   -webkit-transition: opacity 0.15s ease-in-out;
-}
-.reset img {
-  max-width: 20px;
-  position: relative;
-  bottom: -8px;
-  margin-top: 0px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
 }
 .nav-btn:hover {
   color: #FFFFFF;
