--- a/mondrian/style/style.css
+++ b/mondrian/style/style.css
@@ -4,10 +4,7 @@ body {
 }
 .framed {
   min-height: 95%;
-  border-width: 14.5px;
-  border-style: solid;
-  border-color: #e2e2e2;
-  border-radius: 25px;
+  max-width: 85%;
 }
 
 #content {
