--- a/style/style.css
+++ b/style/style.css
@@ -187,4 +187,18 @@ a {
   margin-top: 50px;
   margin-bottom: 57px;
 }
+#body-float {
+  position: fixed;
+  z-index: 1;
+  pointer-events: none;
+}
+#hideNeko {
+    position: sticky;
+    top: 0;
+    left: 0;
+    width: 33px;
+    height: 33px;
+    background-color: #CCCCCC;
+    z-index: 1001;
+}
 /*end:elements*/
