--- a/mind-nodes/style/style.css
+++ b/mind-nodes/style/style.css
@@ -6,6 +6,9 @@
     #contents a {
     font-size: 2.312em;
     }
+    #contents p {
+      font-size: .5em;
+    }
     #title {
     font-size: 2.875em;
     }
@@ -27,6 +30,9 @@
 @media only screen and (min-device-width : 200px) and (max-device-width : 480px) {
     #contents a {
     font-size: 3.58em;
+    }
+    #contents p {
+      font-size: .35em;
     }
     #title {
     font-size: 4em;
@@ -87,7 +93,6 @@ body {
   text-decoration: none;
 } 
 #contents p {
-  font-size: .5em;
   letter-spacing: 0px;
   word-spacing: 0px;
   text-decoration: none;
